CREATE TABLE recipes (
     id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
     name VARCHAR(100) NOT NULL,
     description VARCHAR(500),
     CONSTRAINT uq_recipes_name UNIQUE (name)
);

CREATE TABLE ingredients (
     id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
     name VARCHAR(100) NOT NULL,
     CONSTRAINT uq_ingredients_name UNIQUE (name)
);

CREATE TABLE steps (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    description VARCHAR(500) NOT NULL,
    step_number INT NOT NULL,
    recipe_id BIGINT NOT NULL,
    CONSTRAINT fk_steps_recipe
        FOREIGN KEY (recipe_id) REFERENCES recipes (id)
        ON DELETE CASCADE,
    CONSTRAINT uq_steps_recipe_number UNIQUE (recipe_id, step_number)
);

CREATE TABLE recipe_ingredients (
    recipe_id BIGINT NOT NULL,
    ingredient_id BIGINT NOT NULL,
    quantity NUMERIC NOT NULL,
    unit VARCHAR(50) NOT NULL,
    PRIMARY KEY (recipe_id, ingredient_id),
    CONSTRAINT fk_ri_recipe
        FOREIGN KEY (recipe_id) REFERENCES recipes (id)
        ON DELETE CASCADE,
    CONSTRAINT fk_ri_ingredient
        FOREIGN KEY (ingredient_id) REFERENCES ingredients (id)
        ON DELETE CASCADE
);

CREATE INDEX idx_steps_recipe_id ON steps (recipe_id);
CREATE INDEX idx_ri_ingredient_id ON recipe_ingredients (ingredient_id);