Table recipes {
  id bigint [primary key, increment]
  name varchar(100) [unique, not null]
  description varchar(500)
}

Table ingredients {
  id bigint [primary key, increment]
  name varchar(100) [not null]
  unit varchar(50) [not null]
  quantity numeric(10,3) [not null, check: `quantity > 0`]
  recipe_id bigint [not null]

  indexes {
    (recipe_id, name) [unique, name: 'uq_ingredients_recipe_name']
  }
}

Table steps {
  id bigint [primary key, increment]
  description varchar(500) [not null]
  step_number integer [not null, check: `step_number > 0`]
  recipe_id bigint [not null]

  indexes {
    (recipe_id, step_number) [unique, name: 'uq_steps_recipe_number']
  }
}

Ref fk_ingredients_recipe: ingredients.recipe_id > recipes.id [delete: cascade]
Ref fk_steps_recipe: steps.recipe_id > recipes.id [delete: cascade]